[gd_scene load_steps=5 format=2]

[ext_resource path="res://Misc/UI/Crosshairs/PNG/WhiteRetina/crosshair013.png" type="Texture" id=1]
[ext_resource path="res://Game/Common/Menus/SettingsMenu/Controls/controls_settings_crosshair.gd" type="Script" id=2]
[ext_resource path="res://Game/Common/Utils/UI/common_button.gd" type="Script" id=3]
[ext_resource path="res://Game/Common/Utils/UI/common_slider.gd" type="Script" id=4]

[node name="Crosshair" type="VBoxContainer"]
margin_top = 18.0
margin_right = 1004.0
margin_bottom = 46.0
script = ExtResource( 2 )

[node name="CrosshairOptions" type="HBoxContainer" parent="."]
margin_right = 1135.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CrosshairOptions"]
margin_top = 5.0
margin_right = 323.0
margin_bottom = 19.0
text = "SETTINGS_CONTROLS_GENERAL_CROSSHAIR_LABEL"

[node name="ToolButton" type="OptionButton" parent="CrosshairOptions"]
margin_left = 327.0
margin_right = 356.0
margin_bottom = 20.0
size_flags_vertical = 0
script = ExtResource( 3 )

[node name="Size" type="HBoxContainer" parent="CrosshairOptions"]
margin_left = 360.0
margin_right = 753.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label" type="Label" parent="CrosshairOptions/Size"]
margin_top = 5.0
margin_right = 311.0
margin_bottom = 19.0
text = "SETTINGS_CONTROLS_GENERAL_CROSSHAIR_SIZE"

[node name="SizeSlider" type="HSlider" parent="CrosshairOptions/Size"]
margin_left = 315.0
margin_right = 331.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 5.0
step = 0.001
script = ExtResource( 4 )

[node name="LineEdit" type="LineEdit" parent="CrosshairOptions/Size"]
margin_left = 335.0
margin_right = 393.0
margin_bottom = 24.0
size_flags_vertical = 0
text = "1"

[node name="HBoxContainer" type="HBoxContainer" parent="CrosshairOptions"]
margin_left = 757.0
margin_right = 1135.0
margin_bottom = 20.0
size_flags_vertical = 0

[node name="Label" type="Label" parent="CrosshairOptions/HBoxContainer"]
margin_top = 3.0
margin_right = 329.0
margin_bottom = 17.0
text = "SETTINGS_CONTROLS_GENERAL_CROSSHAIR_COLOR"

[node name="Color" type="ColorPickerButton" parent="CrosshairOptions/HBoxContainer"]
margin_left = 333.0
margin_right = 378.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "Color"
color = Color( 1, 1, 1, 1 )
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 28.0
margin_right = 1135.0
margin_bottom = 28.0

[node name="Preview" type="TextureRect" parent="CenterContainer"]
margin_left = 567.0
margin_right = 567.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
